fixing caption spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ h2 {
     font-weight: bold;
 }
 
+h3 {
+    font-size: 25px;
+}
+
 header {
     display: grid;
     grid-template-rows: 1fr;
@@ -24,6 +28,7 @@ header {
     height: 70px;
     position: fixed;
     top: 0px;
+    z-index: 1;
 }
 
 #aboutmesection {
@@ -131,9 +136,9 @@ header {
 }
 
 .portpic {
-    height: 200px;
-    width: 200px;
-    position: relative;
+    height: 300px;
+    width: 300px;
+    /* position: relative; */
     text-align: center;
 }
 
@@ -174,12 +179,12 @@ header {
 
 #caption {
     position: absolute;
-    /* bottom: 10px; */
     color: white;
-    height: 50px;
-    width: 200px;
+    height: 60px;
+    width: 300px;
     background-color: #4aaaa5;
-  }x;
+    margin-top: 225px;
+    text-align: center;
 }
 
 footer {
